--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
         <h1>Word Counter</h1>
         <div class="textdiv">
-            <textarea id="textarea" style="resize: none;"></textarea>
+            <textarea placeholder="Type your text here..." id="textarea" style="resize: none;"></textarea>
         </div>
         
         <p><span id="word">0</span> words and <span id="char">0</span> characters</p>
